Fix sidebar submenu collapsing behaviour

--- a/src/components/SidebarMenu/SidebarMenu.scss
+++ b/src/components/SidebarMenu/SidebarMenu.scss
@@ -5,3 +5,8 @@
   width: 24px;
   height: 24px;
 }
+
+.sidebar-submenu-class {
+  margin: 0;
+  padding: 0;
+}
